modify size picture in show

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -286,6 +286,17 @@ width: 100%;
   
 }
 
+
+.show-post{
+
+  margin-left: auto;
+  margin-right: auto;
+  height: 60%;
+  width: 30%;
+
+
+}
+
 /* -------------------CAR------------------- */
 
 .car-picture{
