--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,9 +18,7 @@
             <div class="card card-cascade wider reverse">
 
               <!-- Card image -->
-              <div class="view view-cascade overlay">
-                <%= image_tag @post.avatar %>
-                <div class="mask rgba-white-slight"></div>
+                <%= image_tag @post.avatar, class:"card-img-top show-post" %>
               </div>
 
               <!-- Card content -->
