--- a/app/views/posts/_list_articles.html.erb
+++ b/app/views/posts/_list_articles.html.erb
@@ -11,7 +11,7 @@
       Bonne lecture &#128214;"
     </p>
 
-    <%= link_to "Nouvel article", new_post_path, class:"card-img-top card-with-right-left-image-raidators"%>
+    <%= link_to "Nouvel article", new_post_path, class:"btn btn-success btn-raidators"%>
 
 
 
