--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,7 @@
                   <!-- Comments -->
                   <div class="btn btn-default">
                     <i class="far fa-comments pr-2"></i>
-                    <%= link_to 'Comments', products_path, class: "btn btn-default  btn-dark-raidators text-white p-2 mx-0 clearfix d-none d-md-inline-block"%>
+                    <%= link_to 'Commenter', new_post_comment_path, class: "btn btn-default  btn-dark-raidators text-white p-2 mx-0 clearfix d-none d-md-inline-block"%>
                   </div>
 
                 </div>
