--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,24 +1,25 @@
-<html>
-  <body>
+  <% content_for :title, "Editer l'article | Raidators" %>
 
+<div class="container-fluid mt-3 mb-5 light-background-raidators ">
 
-<%= form_for @post do |editpost| %>
+  <div class="col-lg-6 col-md-4 form-background-raidators">
+    <div class="container py-5 my-5">
+      <h3 class="text-center pb-2">Modifier l'article</h3>
+      <%= form_for @post do |editpost| %>
 
-  <div class="form-group">
-    <%= editpost.text_field :title, class:"form-control" %>
+        <div class="form-group">
+          <%= editpost.text_field :title, class:"form-control" %>
+        </div>
+
+        <div class="form_group">
+          <%= editpost.text_field :content, class: 'form-control' %>
+        </div>
+    
+        <%# <div class="actions text-center my-3">
+          <%= f.submit "Modifier l'article", class:"btn btn-primary btn-dark-raidators" %>
+        <%# </div>  %>
+
+      <%end%>
+    </div>
   </div>
-
-  <div class="form_group">
-    <%= editpost.text_field :content, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <button class="btn-primary" type="submit"> Modifier l'article</button>
-  </div>
-
-  <%end%>
-
-
-
-  </body>
-  </html>
+</div>
