add modification list user

--- a/app/views/posts/_list_articles.html.erb
+++ b/app/views/posts/_list_articles.html.erb
@@ -65,7 +65,7 @@
             <!-- Featured image -->
             <hr class="mb-5">
             <div class="post-avatar">
-              <%= image_tag post.avatar %>
+              <%= image_tag post.avatar, class:"avatar-articles" %>
             </div>
           </div>
           <!-- Grid column -->
