correct problem, need front

--- a/app/views/products/_cardproduct.html.erb
+++ b/app/views/products/_cardproduct.html.erb
@@ -57,8 +57,8 @@
                     <div class="card small-card-raidators card-product-aligment-center">
                       <div class="card-img-top "> 
                         <% if product.avatar.attached? %>
-                          <%= image_tag product.avatar, width: "100%", class:"card-img-top top-corner-radius-card-image-raidators" %> 
-                          <%end%>    
+                          <%= image_tag product.avatar, class:"card-img-top top-corner-radius-card-image-raidators" %> 
+                        <%end%>    
                       </div>   
                       <!-- Card content -->
                       <div class="card-body">
@@ -96,7 +96,7 @@
                     <div class="card h-100 card small-card-raidators">
                       <div class="card-img-top "> 
                         <% if product.avatar.attached? %>
-                          <%= image_tag product.avatar, width: "100%", class:"card-img-top top-corner-radius-card-image-raidators" %> 
+                          <%= image_tag product.avatar, class:"card-img-top top-corner-radius-card-image-raidators" %> 
                           <%end%>    
                       </div>   
                       
@@ -182,7 +182,7 @@
                     <div class="card small-card-raidators card-product-aligment-center">
                       <div class="card-img-top "> 
                         <% if product.avatar.attached? %>
-                          <%= image_tag product.avatar, width: "100%", class:"card-img-top top-corner-radius-card-image-raidators" %> 
+                          <%= image_tag product.avatar, class:"card-img-top top-corner-radius-card-image-raidators" %> 
                           <%end%>    
                       </div>   
                     <!-- Card content -->
@@ -222,7 +222,7 @@
                     <div class="card h-100 card small-card-raidators">
                       <div class="card-img-top "> 
                         <% if product.avatar.attached? %>
-                          <%= image_tag product.avatar, width: "100%", class:"card-img-top top-corner-radius-card-image-raidators" %> 
+                          <%= image_tag product.avatar, class:"card-img-top top-corner-radius-card-image-raidators" %> 
                           <%end%>    
                       </div>   
 
