--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -37,7 +37,7 @@
           <h3 class="mb-3"><strong>Vous êtes Particulier  </strong></h3>
           <!-- Excerpt -->
           <p> Vous souhaitez soutenir une action solidaire ? Vous pouvez simplement nous expédier le matériel à l'adresse suivante :
-          10 Route de la Noé d'Armengeo 44600 Saint-Nazaire
+          10 Route de la Noé d'Armengeo 44600 Saint-Nazaire.
           Vous pouvez aussi nous le remettre en main propre à Saint-Nazaire, Nantes ou Angers ou dans des points de collectes listées ci-dessous.<br></p>
 
         </div>
