--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -91,7 +91,7 @@
             <p class="card-title text-muted font-small mt-3 mb-2">3 coéquipier se sont engagé à livrer 70 kg de matériel en voiture dans des écoles isolées d'Europe. Pour atteindre leur objectif, l'équipe Raidators a besoin de votre soutien.</p>
             
             <div class="card-product-aligment-center">
-              <%= link_to "Découvrir l'équipe", equipe_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
+              <%= link_to "Découvrir l'équipe", equipe_path, class: "btn btn-success btn-raidators text-white p-2 mx-0", target:"_blank"%>
             </div>
 
           </div>
@@ -252,7 +252,7 @@
         <div class="col-lg-7">
   
           <!-- Category -->
-          <i class="fas fa-dumbbell"></i>
+          <i class="fas fa-dumbbell fa-2x"></i>
         
           <!-- Post title -->
           <h3 class="mb-3"><strong>Une aventure sportive</strong></h3>
@@ -287,12 +287,12 @@
         <div class="col-lg-7">
   
           <!-- Category -->
-          <i class="fas fa-hands-helping"></i>
+          <i class="fas fa-hands-helping fa-2x"></i>
         
           <!-- Post title -->
           <h3 class="mb-3"><strong>Une aventure humaine</strong></h3>
           <!-- Excerpt -->
-          <p>Europ’Raid est une aventure sportive, culturelle et solidaire, mais surtout une action humanitaire hors du commun.
+          <p>Europ’Raid est une aventure sportive et culturelle mais c'est surtout une action solidaire hors du commun.
             Le but premier est de venir en aide à des enfants défavorisés d’Europe de l’Est. En effet, depuis 2014 tous les équipages ont pour mission d’apporter 70 kg de fournitures scolaires.</p>
           <!-- Read more button -->
           <%= link_to "Faire un achat solidaire ou don", products_path, class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %> 
