--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -166,6 +166,11 @@ section{
   margin-bottom:5% ;
 }
 
+.brown-background-raidators{
+  background-color:rgba(180, 138, 87,0.1);
+  padding-top:5%; 
+  padding-bottom: 5%;
+}
 .dark-background-raidators{
   background-color: #1B221D;
   padding-top:5%; 
