--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -46,7 +46,7 @@
 
             </div>
             <h3>Hélène</h3>
-            <p class="mt-3 mb-4 text-muted">Originaire de région parisienne aussi. Elle a décidé d'emménager Saint Nazaire pour pouvoir déjeuner les pieds dans le sable lors de ses pauses au travail. Elle a la main sur le coeur et à une imagination débordante !</p>
+            <p class="mt-3 mb-4 text-muted">Originaire de région parisienne, elle a décidé d'emménager Saint Nazaire pour pouvoir déjeuner les pieds dans le sable lors de ses pauses au travail. Elle a la main sur le coeur et à une imagination débordante !</p>
           </div>
           <!-- Grid column -->
           
