add modification for orthograph

--- a/app/views/static_pages/car.html.erb
+++ b/app/views/static_pages/car.html.erb
@@ -16,9 +16,9 @@
 
         <h3 class="text-left mb-5">Présentation de la voiture</h3>
 
-        <p class="text-left mb-5">L'équipage est composé de 3 pilotes, voyageurs téméraires aguerris et se serreront les coudes pour toucher à leur but. En effet, au cours de leurs différentesaventures, ils ont pu se rendre compte qu'ils pouvaient aider autrement les pays et les enfants dans le besoin. Ils cherchaient à se rendre utile autrement qu'en visitant le pays...En juillet 2020, sur la côte, face à l'océan, l'histoire des Raid'ateurs et de leur petite 205 commence.
+        <p class="text-left mb-5">L'équipage est composé de 3 pilotes, voyageurs téméraires aguerris qui se serreront les coudes pour toucher à leur but. En effet, au cours de leurs différentesaventures, ils ont pu se rendre compte qu'ils pouvaient aider autrement les pays et les enfants dans le besoin. Ils cherchaient à se rendre utile autrement qu'en visitant le pays...En juillet 2020, sur la côte, face à l'océan, l'histoire des Raid'ateurs et de leur petite 205 commence.
           Ils s'apprêtent à parcourir un long périple pour accomplir une mission très importante : livrer du matériel dans des pays de l'Europe de l'Est.
-          Nous devions créer une association afin d’'encadrer légalement nos démarches: ouvrir un compte bancaire ou même être assuré lors des événements auxquels nous organiserons.
+          Nous devions créer une association afin d’encadrer légalement nos démarches: ouvrir un compte bancaire ou même être assuré lors des événements que nous organiserons.
           </p>
 
         <%= image_tag("car/car.jpg", class:"card-img-top car-picture", alt:"Card image cap") %>
@@ -131,10 +131,10 @@
                 <p>Encart minimum 200 x 200</p>
                 </li>
                 <li>
-                  <p class="mt-2">Même contrepartie du pack voyageur</p>
+                  <p class="mt-2">Même contrepartie que le pack voyageur</p>
                 </li>
                 <li>
-                  <p>Envoie d'une carte postale depuis une étape du parcours</p>
+                  <p>Envoi d'une carte postale depuis une étape du parcours</p>
                 </li>
               </ul>
               <%= link_to 'En savoir plus', contact_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
@@ -179,7 +179,7 @@
                   <p>Présence de votre logo sur les t-shirts portés lors des événements</p>
                 </li>
                 <li>
-                  <p>Envoi d’'un cadeau souvenir</p>
+                  <p>Envoi d’un cadeau souvenir</p>
                 </li>
               </ul>
               <%= link_to 'En savoir plus', contact_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
