--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -51,11 +51,11 @@
                   </div>
 
                   <div class="form-group">
-                   <%= f.text_field :company_name, placeholder: 'Nom de lentreprise', class: 'form-control-raidators mt-3' %>
+                   <%= f.text_field :company_name, placeholder: "Nom de l'entreprise", class: 'form-control-raidators mt-3' %>
                   </div>
 
                   <div class="form-group">
-                    <button class="btn-primary btn btn-primary btn-md btn-dark-raidators mx-0" type="submit"> Ajouter une adresses</button>
+                    <button class="btn-primary btn btn-primary btn-md btn-dark-raidators mx-0" type="submit"> Ajouter une adresse</button>
                   </div>
 
                 <%end%>
