--- a/app/views/posts/_list_articles.html.erb
+++ b/app/views/posts/_list_articles.html.erb
@@ -7,8 +7,8 @@
     <!-- Section heading -->
     <h2 class="text-center  mb-4 pb-2">Articles</h2>
     <!-- Section description -->
-    <p class="text-center mx-auto w-responsive mb-5">Les Raidators : "Retrouve ici l'ensemble des articles de notre blog. Ces articles peuvent aborder à la fois l'avancement de notre projet, des conseils, des recettes secrètes pour faire votre meilleur gâteau au chocolat.
-      Bonne lecture &#128214;"
+    <p class="text-center mx-auto w-responsive mb-5">Retrouve ici l'ensemble des articles de notre blog. Ces articles peuvent aborder à la fois l'avancement de notre projet, des conseils, des recettes secrètes pour faire votre meilleur gâteau au chocolat.
+      Bonne lecture &#128214;
     </p>
 
     <%= link_to "Nouvel article", new_post_path, class:"btn btn-success btn-raidators"%>
