--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -78,7 +78,7 @@
             <!-- Title -->
             <h3 class="black-text"> Culture d'entreprise</h3>
             <!-- Text -->
-            <p class="card-title text-muted font-small mt-3 mb-2">Renforcez votre engagement collaborateurs en impliquant votre équipe dans un événement fédérateur et aux fortes valeurs sociales. Les collaborateurs peuvent suivre l’aventure et contribuer en faisant don de fournitures scolaires, sportives ou médicales.</p>
+            <p class="card-title text-muted font-small mt-3 mb-2">Renforcez votre engagement collaborateur en impliquant votre équipe dans un événement fédérateur et aux fortes valeurs sociales. Les collaborateurs peuvent suivre l’aventure et contribuer en faisant des dons de fournitures scolaires, sportives ou médicales.</p>
             <br>
           </div>
 
@@ -287,7 +287,7 @@
           <h3 class="mb-3"><strong>Faire un don de matériel</strong></h3>
           <!-- Excerpt -->
           <p>Vous ne pouvez pas devenir sponsor financier ? Vous pouvez nous aider d’une autre manière ! 
-          Récoltez du matériel, équipez-nous pour le raid (équipement numériques, camping) ou permettez-nous de revendre vos produits sur notre plateforme.
+          Récoltez du matériel, équipez-nous pour le raid (équipements numériques, camping) ou permettez-nous de revendre vos produits sur notre plateforme.
           </p>
           <!-- Read more button -->
           <%= link_to 'Faire un don matériel', equipements_path, class:"btn btn-success btn-raidators"%>
