--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -182,7 +182,7 @@
             <div class="row pt-4">
               <div class="col-lg-6 col-md-4 col-sm-6 pb-4">            
                 <h3> Email :</h3> <%= @user.email %> </p>
-                <h3> Mon adresse :</h3><p> <%= link_to "Voir", address_path(@address.id), class:"btn btn-outline-primary btn-light-raidators" %></p>
+                <h3> Mon adresse :</h3><p> <%= link_to "Voir", address_path(current_user.id), class:"btn btn-outline-primary btn-light-raidators" %></p>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
             <div class="card-footer white py-3 d-flex justify-content-between">
               <%= link_to "Nouvelle commande", products_path, class: "btn btn-outline-primary btn-dark-raidators text-white p-2 mx-0"%>
               <%= link_to "Créer Adresse", new_address_path, class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
-              <%= link_to "Modifier mon adresse", edit_address_path(@address.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+              <%= link_to "Modifier mon adresse", edit_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
               <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
             </div>
           </div>
