--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -118,7 +118,7 @@
             <!-- Card content -->
             <div class="card-body my-4">
 
-              <%= image_tag("partnership/logo_france_3.png", class:"card-img-top ", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_France_3.png", class:"card-img-top ", alt:"Card image cap") %>               
               
             </div>
           </div>  
@@ -136,7 +136,7 @@
             
             <!-- Card content -->
             <div class="card-body my-4">
-              <%= image_tag("partnership/logo_le_figaro_etudiant.png", class:"card-img-top", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_Le_Figaro_Etudiant.png", class:"card-img-top", alt:"Card image cap") %>               
                   
             </div>
   
@@ -154,7 +154,7 @@
             
             <!-- Card content -->
             <div class="card-body my-4">
-              <%= image_tag("partnership/logo_nrj.png", class:"card-img-top", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_NRJ.png", class:"card-img-top", alt:"Card image cap") %>               
                 
             </div>
   
@@ -172,7 +172,7 @@
             
             <!-- Card content -->
             <div class="card-body my-4">
-              <%= image_tag("partnership/logo_ouest-france.png", class:"card-img-top", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_Ouest-France.png", class:"card-img-top", alt:"Card image cap") %>               
               
             </div>
 
@@ -191,7 +191,7 @@
           <div class="card card-rounded-raidators">
             <!-- Card content -->
             <div class="card-body my-4">
-              <%= image_tag("partnership/logo_parisien.png", class:"card-img-top", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_Parisien.png", class:"card-img-top", alt:"Card image cap") %>               
             </div>
           </div>
           <!-- Card -->
@@ -207,7 +207,7 @@
             
             <!-- Card content -->
             <div class="card-body my-4">
-              <%= image_tag("partnership/logo_virgin_radio.png", class:"card-img-top", alt:"Card image cap") %>               
+              <%= image_tag("partnership/Logo_Virgin_Radio.png", class:"card-img-top", alt:"Card image cap") %>               
               
             </div>
   
