--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-custom fixed-top scrolling-navbar">
-  <%= link_to(image_tag("raidators_noir_logo.png", height:"30", class:"d-inline-block align-top"), root_path) %>
+  <%= link_to(image_tag("Raidators_noir_logo.png", height:"30", class:"d-inline-block align-top"), root_path) %>
   <button class="navbar-toggler navbar-position" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
     aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
