--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -42,7 +42,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
-              <%= image_tag("team/ln.png", class:" rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
+              <%= image_tag("team/LN.png", class:" rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
 
             </div>
             <h3>Hélène</h3>
@@ -54,7 +54,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
-              <%= image_tag("team/ben.png", class:"rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
+              <%= image_tag("team/Ben.png", class:"rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
 
             </div>
             <h3>Benjamin</h3>
@@ -67,7 +67,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
     
             <div class="w-200 mx-auto mb-4">
-              <%= image_tag("team/emy.png", class:" rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
+              <%= image_tag("team/Emy.png", class:" rounded-circle img-fluid mx-auto", alt:"Card image cap") %>
 
             </div>
             <h3>Emilie</h3>
