--- a/app/views/order_mailer/new_order_email.html.erb
+++ b/app/views/order_mailer/new_order_email.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>You got a new order from !</p>
     <p>
-    Order details<br>
-    --------------------------
+    Merci pour ta commande! On revient rapidement vers toi
+     pour que te donner les informations dont tu as besoin en attendant tu peux consulter les détails sur ta page profil de notre site internet. </p>
+    <p>
 
 
-  
+  <p> Les Raidators </p>
   </body>
 </html>
