--- a/app/views/order_mailer/new_order_email.text.erb
+++ b/app/views/order_mailer/new_order_email.text.erb
@@ -1,3 +1,5 @@
+<h2>Salut les Raidators, </h2>
+  <p>Vous avez une nouvelle commande/don, et ca c est une  s u p e r nouvelle</p>
+  <p>GO dans ta partie admin!</p>
 
-You got a new order from !
-===============================================
+
