--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -182,7 +182,10 @@
             <div class="row pt-4">
               <div class="col-lg-6 col-md-4 col-sm-6 pb-4">            
                 <h3> Email :</h3> <%= @user.email %> </p>
-                <h3> Mon adresse :</h3><p> <%= link_to "Voir", address_path(current_user.id), class:"btn btn-outline-primary btn-light-raidators" %></p>
+                <% if @user.addresses %>
+                <%else%>
+                <h3> Mon adresse :</h3><p> <%= link_to "Voir", user_address_path(current_user.id), class:"btn btn-outline-primary btn-light-raidators" %></p>
+                <%end %>
               </div>
             </div>
           </div>
@@ -234,9 +237,12 @@
               </table>
             </div>
             <div class="card-footer white py-3 d-flex justify-content-between">
-              <%= link_to "Nouvelle commande", products_path, class: "btn btn-outline-primary btn-dark-raidators text-white p-2 mx-0"%>
-              <%= link_to "Créer Adresse", new_address_path, class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
-              <%= link_to "Modifier mon adresse", edit_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+            <%= link_to "Nouvelle commande", products_path, class: "btn btn-outline-primary btn-dark-raidators text-white p-2 mx-0"%>
+            <% if @user.addresses %>
+              <%= link_to "Créer Adresse", new_user_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+              <% else%>
+              <%= link_to "Modifier mon adresse", edit_user_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+              <%end %>
               <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
             </div>
           </div>
