fix bug for create an address

--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -17,7 +17,7 @@
             <div class="card">
               <div class="card-body px-4">
 
-                <%= form_for Address.create do |f| %>
+                <%= form_for [@user, @address] do |f| %>
 
                   <div class="form-group mb-2">
                     <%= f.text_field :first_name, placeholder: 'Prénom', class:"form-control form-control-raidators" %>
