--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -17,7 +17,7 @@
               <div class="card-body px-4">
                 <h1> Modifier l'adresse </h1>
 
-                <%= form_for @address do |f| %>
+                <%= form_for [@user, @address] do |f| %>
 
                   <div class="form-group">
                   <%= f.text_field :first_name, class:"form-control form-control-raidators" %>
