--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -183,8 +183,9 @@
               <div class="col-lg-6 col-md-4 col-sm-6 pb-4">            
                 <h3> Email :</h3> <%= @user.email %> </p>
                 <% if @user.addresses %>
+                <h3> Mon adresse :</h3><p> <%= link_to "Voir", user_address_path(@user, @user.addresses.first), class:"btn btn-outline-primary btn-light-raidators" %></p>
                 <%else%>
-                <h3> Mon adresse :</h3><p> <%= link_to "Voir", user_address_path(current_user.id), class:"btn btn-outline-primary btn-light-raidators" %></p>
+          
                 <%end %>
               </div>
             </div>
@@ -238,12 +239,14 @@
             </div>
             <div class="card-footer white py-3 d-flex justify-content-between">
             <%= link_to "Nouvelle commande", products_path, class: "btn btn-outline-primary btn-dark-raidators text-white p-2 mx-0"%>
+
             <% if @user.addresses %>
-              <%= link_to "Créer Adresse", new_user_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
-              <% else%>
-              <%= link_to "Modifier mon adresse", edit_user_address_path(current_user.id), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
-              <%end %>
+              <%= link_to "Modifier mon adresse", edit_user_address_path(@user, @user.addresses.first), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+            <% else %>
+              <%= link_to "Créer Adresse", new_user_address_path(@user), class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+            <%end%>
               <%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "btn btn-outline-primary btn-light-raidators p-2 mx-0"%>
+
             </div>
           </div>
          
