resolve conflict in user profil

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid mt-3 mb-5 brown-background-raidators">
 
   <!-- Full Page Intro -->
-  <section class:"image-edit-registration">
+  <section class="image-edit-registration">
     <!-- background -->
     <div class="col-lg-6 col-md-4 form-background-raidators">
       <!-- Content -->
