add responsive to website

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <%= favicon_link_tag asset_path('cheetah.png') %>   
       <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>
       <%= csrf_meta_tags %>
-    </meta>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
   <body>
