--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,11 @@
+@media screen and (min-width: 200px) and (max-width: 640px) {
+  .bloc {
+    display:block;
+  }
+}
+
+
+
 /* custom.css */
 
 
@@ -342,3 +350,4 @@ width: 100%;
   border-radius: 6px; 
   
 }
+
