--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
               <div class="card-body card-body-cascade text-center">
 
                 <!-- Title -->
-                <h2 class=""><%= @post.title %></h2>
+                <h2 ><%= @post.title %></h2>
                 <!-- Social shares -->
                 <div class="social-counters">
                   <!-- Facebook -->
