--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -4,44 +4,31 @@
   <section class="contact">
     <!--Section: Content-->
     <!--Grid row-->
-    <div class="col-lg-6 col-md-4 form-background-raidators text-center text-lg-left">
-      
-    <div class="container py-5 my-5">
-      <div class="row justify-content-center">
-
-        <!--Grid column-->
-        <div class="col-lg-7 col-md-12 mb-0 mb-md-0">
-
-          <h3 class="">Contactez-nous</h3>
-
-          <p class="text-muted">Vous avez des questions ou simplement besoin de plus d'informations ? Contactez-nous via le formulaire. </p>
-
-          <p class="mr-2">Email: Raidators@outlook.fr<br>
-          Emilie 06.67.02.16.46<br>
-          Hélène 06.59.18.54.21<br>
-          Benjamin 06.34.47.18.20<br>
-          </p>
-
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-7 col-md-12 mb-4 mb-md-0">
-
-          <!--Grid row-->
-          <div class="row">
-          
-          <%= link_to "Messenger", "https://www.facebook.com/lesraidators/", class: "btn btn-info btn-contact text-white p-10 mx-5", target:"_blank"%>
-
+    <div class="col-lg-6 col-md-4 form-background-raidators text-center text-lg-left"> 
+      <div class="container py-5 my-5">
+        <div class="row justify-content-center">
+          <!--Grid column-->
+          <div class="col-lg-7 col-md-12 mb-0 mb-md-0">
+            <h3 >Contactez-nous</h3>
+            <p class="text-muted">Vous avez des questions ou simplement besoin de plus d'informations ? Contactez-nous via le formulaire. </p>
+            <p class="mr-2">Email: Raidators@outlook.fr<br>
+            Emilie 06.67.02.16.46<br>
+            Hélène 06.59.18.54.21<br>
+            Benjamin 06.34.47.18.20<br>
+            </p>
           </div>
-
+          <!--Grid column-->
+          <div class="col-lg-7 col-md-12 mb-4 mb-md-0">
+            <!--Grid row-->
+            <div class="row">            
+            <%= link_to "Messenger", "https://www.facebook.com/lesraidators/", class: "btn btn-info btn-contact text-white p-10 mx-5", target:"_blank"%>
+            </div>
+          </div>
+          <!--Grid column-->
         </div>
-        <!--Grid column-->
-
+        <!--Grid row-->
       </div>
-      <!--Grid row-->
-    </div>
-    
+    </div> 
     <!--Section: Content-->
   </section>
 </div>
