--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -80,11 +80,11 @@
                 <% else %>
                   <p> Votre panier est vide </p>
                 <% end %>
-                <button type="button" class= "btn btn-success my-3"><%= link_to "Aller a la Boutique",products_path %></button>
+                <button type="button" class= "btn btn-success btn-raidators my-3"><%= link_to "Aller a la Boutique",products_path %></button>
               </div>
               <div class="container mt-5 mb-3 text-center w-50 card-center">
               <% if @user.addresses.empty? %>
-                    <button type="button" class= "btn btn-success my-3"><%= link_to "Créer Adresse",new_user_address_path(@user) %></button>
+                    <button type="button" class= "btn btn-success btn-dark-raidators my-3"><%= link_to "Créer Adresse",new_user_address_path(@user) %></button>
               <%else%>
                 <div id="stripe" class="mt-2">
                   <%= render 'stripe' %>
