--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -30,12 +30,15 @@
                   <div class="form-group">
                   <%= f.text_area :description, placeholder: 'Description', class: 'form-control' %>
                   </div>
+
+                  <div class="form-group">
+                  <%= f.select :category,['Don', 'Produit'], {}, class: 'form-control' %>
+                  </div>
                   
                   <div>
                     <h3>Ajouter une photo</h3>
                     <%= f.label :avatar %>
                     <%= f.file_field :avatar, class: 'form-control', accept: "image/png, image/gif, image/jpeg" %>
-                    <%= f.text_field :category, placeholder: 'Catégorie', class: 'form-control' %>
                   </div>
                   
                   <div class="actions text-center my-3">
