--- a/app/views/order_mailer/new_order_email.html.erb
+++ b/app/views/order_mailer/new_order_email.html.erb
@@ -4,12 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>You got a new order from !</p>
+    <p>Vous avez une nouvelle commande !</p>
     <p>
-    Order details<br>
+    Détail de la commande <br>
     --------------------------
-
-
-  
   </body>
 </html>
