--- a/app/views/products/_cardproduct.html.erb
+++ b/app/views/products/_cardproduct.html.erb
@@ -3,7 +3,6 @@
 <%= render :partial => "shared/banner" %>
 
 <% if current_user && current_user.admin %>
-
   <section>
     <div class="container mt-5">
       <!--Section: Content-->
@@ -15,13 +14,10 @@
       <!--Section: Content-->
     </div>
   </section>
-
   <section class="light-background-raidators">
     <div class="container mt-5">
-
       <!--Section: Content-->
-      <section>
-
+      <section>x
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
@@ -41,16 +37,12 @@
             </ul>
           </div>
         </div>
-
         <!-- Pills panels -->
         <div class="tab-content mb-5 align-items-center">
-
           <!--Panel 1-->
           <div class="tab-pane fade show in active" id="panel31" role="tabpanel">
-
             <!--Grid row-->
             <div class="row mx-4 my-4 justify-content-center">
-
               <% @products.each do |product| %>
                 <% if product.donation? %>
                   <div class="col-lg-3 col-md-3 mb-4">
@@ -80,7 +72,6 @@
                   </div>
                 <% end %>
               <% end %>
-
             </div>
             <!--Grid row-->
 
@@ -123,9 +114,7 @@
 
           </div>
 
-        </div>
-        
-      
+        </div>   
       </section>
     </div>
   </section>
@@ -143,13 +132,10 @@
       <!--Section: Content-->
     </div>
   </section>
-
   <section class="light-background-raidators">
     <div class="container mt-5">
-
       <!--Section: Content-->
       <section>
-
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
@@ -166,16 +152,12 @@
             </ul>
           </div>
         </div>
-
         <!-- Pills panels -->
         <div class="tab-content mb-5 align-items-center">
-
           <!--Panel 1-->
           <div class="tab-pane fade show in active" id="panel31" role="tabpanel">
-
             <!--Grid row-->
             <div class="row mx-4 my-4 justify-content-center">
-
               <% @products.each do |product| %>
                 <% if product.donation? %>
                   <div class="col-lg-3 col-md-3 mb-4">
@@ -206,15 +188,11 @@
                   </div>
                 <% end %>
               <% end %>
-
             </div>
             <!--Grid row-->
-
           </div>
           <!--Panel 2-->
-
           <div class="tab-pane fade" id="panel32" role="tabpanel">
-
             <div class="row mx-4 my-4 justify-content-center">
               <% @products.each do |product| %>
                 <% if product.merchandising? %>
@@ -225,7 +203,6 @@
                           <%= image_tag product.avatar, class:"card-img-top top-corner-radius-card-image-raidators" %> 
                           <%end%>    
                       </div>   
-
                       <!-- Card content -->
                         <div class="card-body">
                           <h3> <%= product.title %> </h3>
@@ -233,7 +210,6 @@
                           <% if user_signed_in? %>
                             <%= link_to "soutenir le projet", selected_products_path(product_id: product.id), method: 'POST', class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
                             <%= link_to "Voir le détails", product_path(product.id), class:"btn btn-outline-primary btn-light-raidators btn-md  mx-0" %>
-
                           <% else %>
                             <%= link_to "soutenir le projet", new_user_session_path, class:"btn btn-success btn-raidators btn-md btn-rounded mx-0" %>
                           <% end %>
@@ -248,12 +224,8 @@
                 <% end %>
               <% end %>
             </div>
-
           </div>
-
         </div>
-        
-      
       </section>
     </div>
   </section>
