--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,18 +1,15 @@
-<% content_for :title, "Envoi instructions pour confirmation compte | Raidators" %>
+<% content_for :title, " Instructions compte | Raidators" %>
 
 <!-- Main navigation -->
 <div class="container-fluid mt-3 mb-5 light-background-raidators">
-
   <!-- Full Page Intro -->
   <section class:"image-edit-registration">
     <!-- background -->
     <div class="col-lg-6 col-md-4 form-background-raidators">
       <!-- Content -->
-      <div class="container my-5">
-        
+      <div class="container my-5">     
         <h3 class="text-center pb-2">Envoyer les instructions de connexion.</h3>
-        <p class="lead text-center text-dark pt-2 mb-5"></p>
-        
+        <p class="lead text-center text-dark pt-2 mb-5"></p>    
         <!--Grid row-->
         <div class="row d-flex align-items-center justify-content-center form-background-raidators">
           <!--Grid column-->
@@ -22,19 +19,15 @@
               <div class="card-body px-4">
                 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
                   <%= render "devise/shared/error_messages", resource: resource %>
-
                   <div class="field md-form mt-3">
                     <%= f.label :email %><br />
                     <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class:"form-control form-control-raidators" %>
                   </div>
-
                   <div class="actions my-3">
                     <%= f.submit "Resend confirmation instructions", class:"btn btn-primary btn-md btn-dark-raidators mx-0" %>
                   </div>
                 <% end %>
-
-                <%= render "devise/shared/links" %>
-                
+                <%= render "devise/shared/links" %>               
               </div>
               <!--/.Form-->
             </div>
