--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour, <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Quelqu'un à demander à modifier votre mot de passe. Vous pouvez le modifier en cliquant sur le lien ci-dessous.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'êtes pas à l'origine de la demande, merci de ne pas tenir compte de ce mail.</p>
+<p>Votre mot de passe ne sera pas changé si vous ne cliquez pas sur ce lien.</p>
