front carroussel reviewed

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -18,8 +18,10 @@
         </div>
         <div class="carousel-caption">
           <h1 class="title-carousel-raidators text-white">La solidarité n'a pas de frontière</h1>
-          <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
-          <%= link_to 'Nous soutenir', products_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
+          <div class="col d-none d-md-block">
+           <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
+           <%= link_to 'Nous soutenir', products_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
+          </div>
         </div>
       </div>
       <div class="carousel-item ">
@@ -31,8 +33,10 @@
         </div>
         <div class="carousel-caption">
           <h1 class="title-carousel-raidators text-white">La solidarité n'a pas de frontière</h1>
-          <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021.<br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
-          <%= link_to 'Nous soutenir', products_path, class: "btn btn-success  btn-raidators text-white p-2 mx-0"%>
+          <div class="col d-none d-md-block">
+            <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021.<br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
+           <%= link_to 'Nous soutenir', products_path, class: "btn btn-success  btn-raidators text-white p-2 mx-0"%>
+          </div>
         </div>
       </div>
       <div class="carousel-item ">
@@ -150,7 +154,6 @@
           <%= image_tag("home_page/professionnal.png", class:"card-img-top top-corner-radius-card-image-raidators", alt:"Card image cap") %>            
             <!-- Card content -->
             <div class="card-body">
-  
               <!-- Title -->
               <h3 class="black-text">Je suis un.e professionnel</h3>
               <!-- Text -->
