--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,3 @@
-@media screen and (min-width: 200px) and (max-width: 640px) {
-  .bloc {
-    display:block;
-  }
-}
-
-
 
 /* custom.css */
 
@@ -359,3 +352,15 @@ width: 100%;
   
 }
 
+@media screen and (min-width: 200px) and (max-width: 640px) {
+  .bloc {
+    display:block;
+  }
+}
+
+@media screen and (min-width: 200px) and (max-width: 750px) {
+  .title-carousel-raidators {
+    font-size: 2.1em;
+  }
+  
+}
