--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -16,21 +16,21 @@
               <div class="container text-center my-5">
                 <%= form_for @product do |f| %>
                   <div class="form-group">
-                  <%= f.text_field :title, placeholder: 'Titre', class:"form-control" %>
+                  <%= f.text_field :title, placeholder: 'Titre', class:"form-control form-control-raidators" %>
                   </div>
                   <div class="form_group">
-                  <%= f.text_field :price, placeholder: 'Prix',  class: 'form-control' %>
+                  <%= f.text_field :price, placeholder: 'Prix',  class: 'form-control form-control-raidators' %>
                   </div>
                   <div class="form-group">
-                  <%= f.text_area :description, placeholder: 'Description', class: 'form-control' %>
+                  <%= f.text_area :description, placeholder: 'Description', class: 'mt-3 form-control form-control-raidators' %>
                   </div>
                   <div class="form-group">
-                  <%= f.select :category,['Don', 'Produit'], {}, class: 'form-control' %>
+                  <%= f.select :category,['Don', 'Produit'], {}, class: 'form-control form-control-raidators' %>
                   </div>  
                   <div>
                     <h3>Ajouter une photo</h3>
                     <%= f.label :avatar %>
-                    <%= f.file_field :avatar, class: 'form-control', accept: "image/png, image/gif, image/jpeg" %>
+                    <%= f.file_field :avatar, class: 'form-control form-control-raidators', accept: "image/png, image/gif, image/jpeg" %>
                   </div>       
                   <div class="actions text-center my-3">
                     <%= f.submit "Valider le don/produit", class:"btn btn-primary btn-dark-raidators" %>
