--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -9,77 +9,7 @@
         <h3 class="text-center text-uppercase small mb-4">Admin</h3>
         <h2 class="text-center pb-2">Données</h2>
         <hr class="w-header my-4">
-        <p class="lead text-center text-muted pt-2 mb-5">Bonjour petit raidator, cette page te permet d'avoir une vision global de l'avancement du projet.</p>
-        <!--Grid row-->
-        <div class="row">  
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-12 mb-4">    
-            <!-- Admin card -->
-            <div class="card mt-3">   
-              <div>
-                <i class="far fa-money-bill-alt fa-lg primary-color p-4 ml-3 mt-n3 rounded text-white"></i>
-                <div class="float-right text-right p-3">
-                  <p class="text-uppercase text-muted mb-1"><small>Ventes</small></p>
-                  <h3 class="mb-0">23 000$</h3>
-                </div>
-              </div>  
-              <div class="card-body pt-0">
-                <div class="progress md-progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p class="card-text">Better than last week (75%)</p>
-              </div>
-            </div>
-            <!-- Admin card -->
-          </div>
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4">   
-            <!-- Admin card -->
-            <div class="card mt-3">  
-              <div >
-                <i class="fas fa-chart-line fa-lg teal p-4 ml-3 mt-n3 rounded text-white"></i>
-                <div class="float-right text-right p-3">
-                  <p class="text-uppercase text-muted mb-1"><small>inscription</small></p>
-                  <p class="mb-0">3534</p>
-                </div>
-              </div> 
-              <div class="card-body pt-0">
-                <div class="progress md-progress">
-                  <div class="progress-bar bg-danger" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p class="card-text">Worse than last week (46%)</p>
-               </div>  
-            </div>
-            <!-- Admin card -->
-          </div>
-          <!--Grid column-->
-    
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4">
-            <!-- Admin card -->
-            <div class="card mt-3">
-              <div>
-                <i class="fas fa-chart-pie fa-lg purple p-4 ml-3 mt-n3 rounded text-white"></i>
-                <div class="float-right text-right p-3">
-                  <p class="text-uppercase text-muted mb-1"><small>traffic</small></p>
-                  <p class="mb-0">656 234</p>
-                </div>
-              </div>
-              <div class="card-body pt-0">
-                <div class="progress md-progress">
-                  <div class="progress-bar bg-success" role="progressbar" style="width: 31%" aria-valuenow="31" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-                <p class="card-text">Better than last week (31%)</p>
-              </div>
-            </div>
-            <!-- Admin card -->
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
+        <p class="lead text-center text-muted pt-2 mb-5">Bonjour petit raidator, cette page te permet d'avoir une vision global des commandes.</p>
       </section>
       <!--Section: Content-->
     </div>
