--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -19,7 +19,7 @@
         <div class="carousel-caption">
           <h1 class="title-carousel-raidators text-white">La solidarité n'a pas de frontière</h1>
           <div class="col d-none d-md-block">
-            <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
+            <p class="paragraph-carousel-raidators col d-none d-md-block">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
             <%= link_to 'Nous soutenir', products_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>
           </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="carousel-caption">
           <h1 class="title-carousel-raidators text-white">La solidarité n'a pas de frontière</h1>
           <div class="col d-none d-md-block">
-            <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021.<br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
+            <p class="paragraph-carousel-raidators col d-none d-md-block">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021.<br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
             <%= link_to 'Nous soutenir', products_path, class: "btn btn-success  btn-raidators text-white p-2 mx-0"%>
           </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="carousel-caption">
           <h1 class=" title-carousel-raidators text-white">La solidarité n'a pas de frontière</h1>
           <div class="col d-none d-md-block">
-            <p class="paragraph-carousel-raidators">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
+            <p class="paragraph-carousel-raidators col d-none d-md-block">Les Raidators souhaitent récolter des dons divers afin de les distribuer à travers l’Europe en 2021. <br> Particuliers comme professionnels ont un rôle essentiel dans cette démarche.</p>
             <%= link_to 'Nous soutenir', products_path, class: "btn btn-success  btn-raidators text-white p-2 mx-0"%>
           </div>
         </div>
@@ -320,5 +320,6 @@
   </div>
 </section>
 
+  
 
 
